--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jquery": "^3.6.1"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.14"
+    "@types/jquery": "^3.5.14",
+    "jison": "^0.4.18",
+    "path-browserify": "^1.0.1"
   }
 }
