--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.2.3",
     "codemirror": "^6.0.1",
     "jquery": "^3.6.2",
+    "queue-typescript": "^1.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
