--- a/experimental/package.json
+++ b/experimental/package.json
@@ -21,14 +21,19 @@
     "@codemirror/state": "^6.1.4",
     "bootstrap": "^5.2.3",
     "codemirror": "^6.0.1",
+    "fs": "0.0.1-security",
     "jquery": "^3.6.2",
     "queue-typescript": "^1.0.1",
     "uuid": "^9.0.0",
-    "fs": "0.0.1-security"
+    "vacuumworld-ts": "file:src/model/vacuumworld-ts-1.0.0.tgz"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
     "jison": "^0.4.18",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
