--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -3,16 +3,31 @@
     "version": "1.0.0",
     "description": "",
     "main": "dist/main.js",
-    "devDependencies": {
+    "dependencies": {
         "fs": "0.0.1-security",
+        "path": "^0.12.7",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
         "queue-typescript": "^1.0.1",
-        "ts-loader": "^8.0.3",
-        "typescript": "^4.0.2",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.4",
         "uuid": "^9.0.0",
         "webpack": "^5.75.0",
-        "webpack-cli": "^3.3.12"
+        "webpack-cli": "^5.0.1"
+    },
+    "devDependencies": {
+        "fs": "0.0.1-security",
+        "path-browserify": "^1.0.1",
+        "queue-typescript": "^1.0.1",
+        "ts-loader": "^9.4.2",
+        "typescript": "^4.9.4",
+        "uuid": "^9.0.0",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "start": "live-server ../..",
+        "run": "webpack && live-server ../.."
     }
 }
