--- a/experimental/package.json
+++ b/experimental/package.json
@@ -2,9 +2,9 @@
   "name": "web-agent",
   "version": "1.0.0",
   "description": "Browser-based agent development for educational purposes.",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx parcel index.html --open"
   },
   "repository": {
     "type": "git",
@@ -19,15 +19,17 @@
   "homepage": "https://github.com/dicelab-rhul/web-agent#readme",
   "dependencies": {
     "@codemirror/state": "^6.1.4",
+    "@codemirror/view": "^6.1.4",
     "bootstrap": "^5.2.3",
     "codemirror": "^6.0.1",
     "fs": "0.0.1-security",
     "jquery": "^3.6.2",
+    "parcel": "^2.8.3",
     "queue-typescript": "^1.0.1",
-    "uuid": "^9.0.0",
-    "vacuumworld-ts": "file:src/model/vacuumworld-ts-1.0.0.tgz"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "codemirror": "^6.0.1",
     "@types/jquery": "^3.5.14",
     "jison": "^0.4.18",
     "path-browserify": "^1.0.1",
