--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -9,11 +9,7 @@
         "path-browserify": "^1.0.1",
         "process": "^0.11.10",
         "queue-typescript": "^1.0.1",
-        "ts-loader": "^9.4.2",
-        "typescript": "^4.9.4",
-        "uuid": "^9.0.0",
-        "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "fs": "0.0.1-security",
