Simplified the deployment.

--- a/envs/example-env-ts/package.json
+++ b/envs/example-env-ts/package.json
@@ -1,6 +1,7 @@
 {
     "name": "example-env-ts",
     "version": "1.0.0",
+    "type": "module",
     "description": "",
     "main": "dist/main.js",
     "scripts": {
