--- a/envs/example-env-ts/tsconfig.json
+++ b/envs/example-env-ts/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "noImplicitAny": true,
         "target": "ES2022",
-        "module": "ES2022"
+        "module": "ES2022",
+        "moduleResolution": "node"
     }
 }
