Started the integration of the Teleora editor.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     },
     "exclude": [
         "./envs/",
-        "./experimental/"
+        "./experimental/",
+        "./teleora_editor/"
     ]
 }
