Reorganised the `static` and `dist` directories.

--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,11 @@ pull.sh
 
 # Parcel stuff
 .parcel-cache
-experimental/dist/
+experimental/dist
+
+# JS dist files
+dist/js/
+static/js/
 
 # IDE files
 .vscode/
