--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "noImplicitAny": true,
         "target": "ES2022",
-        "module": "ES2022"
+        "module": "ES2022",
+        "moduleResolution": "node"
     },
     "exclude": [
         "./envs/",
