--- a/envs/vacuumworld-ts/tsconfig.json
+++ b/envs/vacuumworld-ts/tsconfig.json
@@ -3,6 +3,7 @@
         "noImplicitAny": true,
         "target": "ES2022",
         "module": "ES2022",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "resolveJsonModule": true
     }
 }
