Removed some magic strings.

--- a/envs/vacuumworld-ts/src/model/config.json
+++ b/envs/vacuumworld-ts/src/model/config.json
@@ -1,76 +1,13 @@
 {
-    "total_cycles": 0,
-    "white_mind_filename": "",
-    "orange_mind_filename": "",
-    "green_mind_filename": "",
-    "user_mind_filename": "",
-    "user_mind_levels": [0, 1],
-    "default_user_mind_level": 0,
-    "skip": false,
-    "play": false,
-    "file_to_load": "",
-    "default_monitor_number": 0,
-    "scale": -1,
-    "x_scale": -1,
-    "y_scale": -1,
-    "time_step_min": 0.04,
-    "time_step_base": 0.96,
-    "time_step": 0.96,
-    "time_step_modifier": 1,
-    "tooltips": true,
-    "root_font": [
-        "Verdana",
-        10,
-        ""
-    ],
-    "grid_size": 480,
-    "location_size": 60,
-    "button_size": 50,
-    "base_screen_width": 1920,
-    "base_screen_height": 1080,
-    "screen_width": -1,
-    "screen_height": -1,
-    "top_directory_name": "web-agent",
-    "res_directory_name": "res",
-    "locations_directory_name": "locations",
-    "agent_images_directory_name": "agent",
-    "dirt_images_directory_name": "dirt",
-    "button_data_path": "",
-    "location_agent_images_path": "",
-    "location_dirt_images_path": "",
-    "main_menu_image_path": "",
-    "button_data_file": "buttons.json",
-    "to_compute_programmatically_at_boot": [
-        "scale",
-        "x_scale",
-        "y_scale",
-        "screen_width",
-        "screen_height",
-        "button_data_path",
-        "location_agent_images_path",
-        "location_dirt_images_path",
-        "main_menu_image_path"
-    ],
-    "bg_colour": "#FFFFFF",
-    "fg_colour": "#000000",
-    "autocomplete_entry_bg_colour": "#CCCCCC",
-    "buttons_fg_colour": "#FFFFFF",
-    "tooltips_bg_colour": "#FFFFE0",
-    "tooltips_fg_colour": "#000000",
-    "tooltips_font": [
-        "tahoma",
-        "8",
-        "normal"
-    ],
-    "project_repo_url": "https://github.com/dicelab-rhul/web-agent",
-    "project_wiki_url": "https://github.com/dicelab-rhul/web-agent/wiki",
-    "initial_environment_dim": 8,
-    "min_environment_dim": 3,
-    "max_environment_dim": 13,
-    "max_number_of_actions_per_actor_per_cycle": 2,
-    "max_number_of_physical_actions_per_actor_per_cycle": 1,
-    "max_number_of_communicative_actions_per_actor_per_cycle": 1,
-    "sender_id_spoofing_allowed": true,
+    "projectRepoURL": "https://github.com/dicelab-rhul/web-agent",
+    "wikiPageURL": "https://github.com/dicelab-rhul/web-agent/wiki",
+    "initialEnvDim": 8,
+    "minEnvDim": 3,
+    "maxEnvDim": 13,
+    "maxNumberOfActionsPerActorPerCycle": 2,
+    "maxNumberOfPhysicalActionsPerActorPerCycle": 1,
+    "maxNumberOfCommunicativeActionsPerActorPerCycle": 1,
+    "senderIDSpoofingAllowed": true,
     "debug": true,
     "debug_primes": [7, 11, 101],
     "debug_test": false,
