--- a/envs/vacuumworld-ts/tsconfig.json
+++ b/envs/vacuumworld-ts/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "ES2022",
         "module": "ES2022",
         "moduleResolution": "node",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
     }
 }
