--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@types/uuid": "^9.0.0",
+        "buffer": "^6.0.3",
         "fs": "0.0.1-security",
         "path": "^0.12.7",
         "path-browserify": "^1.0.1",
