Extracted more magic strings to JSON files.

--- a/teleora_editor/tsconfig.json
+++ b/teleora_editor/tsconfig.json
@@ -3,6 +3,8 @@
         "noImplicitAny": true,
         "target": "ES2022",
         "module": "ES2022",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
     }
 }
