--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -12,8 +12,8 @@
     },
     "devDependencies": {
         "@types/uuid": "^9.0.0",
-        "buffer": "^6.0.3",
         "fs": "0.0.1-security",
+        "js-base64": "^3.7.4",
         "path": "^0.12.7",
         "path-browserify": "^1.0.1",
         "process": "^0.11.10",
