--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -8,7 +8,8 @@
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-merge": "^5.8.0"
     },
     "devDependencies": {
         "@types/uuid": "^9.0.0",
@@ -21,6 +22,7 @@
         "uuid": "^9.0.0"
     },
     "scripts": {
-        "build": "webpack"
+        "build": "webpack --config webpack.prod-config.cjs",
+        "dev-build": "webpack --config webpack.dev-config.cjs"
     }
 }
