--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "",
     "main": "static/js/index.js",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack --config webpack.prod-config.cjs",
+        "dev-build": "webpack --config webpack.dev-config.cjs"
     },
     "dependencies": {
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-merge": "^5.8.0"
     }
 }
