--- a/teleora_editor/package.json
+++ b/teleora_editor/package.json
@@ -5,13 +5,15 @@
     "description": "",
     "main": "dist/main.js",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack --config webpack.prod-config.cjs",
+        "dev-build": "webpack --config webpack.dev-config.cjs"
     },
     "dependencies": {
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.1"
+        "webpack-cli": "^5.0.1",
+        "webpack-merge": "^5.8.0"
     },
     "devDependencies": {
         "@codemirror/lang-javascript": "^6.1.2",
