Moved the `webpack` configuration files into a dedicated directory.

--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -22,7 +22,7 @@
         "uuid": "^9.0.0"
     },
     "scripts": {
-        "build": "webpack --config webpack.prod-config.cjs",
-        "dev-build": "webpack --config webpack.dev-config.cjs"
+        "build": "webpack --config webpack_config/webpack.prod-config.cjs",
+        "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
     }
 }
