--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.1",
         "webpack-merge": "^5.8.0"
+    },
+    "devDependencies": {
+        "@types/dompurify": "^2.4.0",
+        "@types/trusted-types": "^2.0.2",
+        "dompurify": "^2.4.3",
+        "trusted-types": "^2.0.0"
     }
 }
