--- a/teleora_editor/tsconfig.json
+++ b/teleora_editor/tsconfig.json
@@ -6,5 +6,9 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true
-    }
+    },
+    "exclude": [
+        "./dist",
+        "./webpack-config"
+    ]
 }
