--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "exclude": [
         "./envs",
         "./experimental",
-        "./teleora_editor"
+        "./teleora_editor",
+        "./webserver",
+        "./static",
+        "./webpack-config"
     ]
 }
