--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
     },
     "dependencies": {
+        "open": "^9.1.0",
         "ts-loader": "^9.4.2",
         "typescript": "^4.9.4",
         "webpack": "^5.75.0",
