--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -3,15 +3,8 @@
     "version": "1.0.0",
     "type": "module",
     "description": "An agent platform with cleaning robots, pieces of dirt, and human users engaging in the practice of fly tipping.",
-    "main": "dist/main.js",
+    "main": "dist/js/main.js",
     "dependencies": {
-        "ts-loader": "^9.4.2",
-        "typescript": "^5.0.4",
-        "webpack": "^5.79.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-merge": "^5.8.0"
-    },
-    "devDependencies": {
         "@types/uuid": "^9.0.0",
         "fs": "0.0.1-security",
         "js-base64": "^3.7.4",
@@ -19,7 +12,12 @@
         "path-browserify": "^1.0.1",
         "process": "^0.11.10",
         "queue-typescript": "^1.0.1",
-        "uuid": "^9.0.0"
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.4",
+        "uuid": "^9.0.0",
+        "webpack": "^5.79.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-merge": "^5.8.0"
     },
     "scripts": {
         "build": "webpack --config webpack_config/webpack.prod-config.cjs",
