--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
         "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
     },
     "dependencies": {
+        "@types/dompurify": "^2.4.0",
+        "@types/trusted-types": "^2.0.2",
+        "dompurify": "^2.4.3",
         "open": "^9.1.0",
+        "trusted-types": "^2.0.0",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
         "webpack": "^5.79.0",
@@ -17,51 +21,85 @@
     },
     "devDependencies": {
         "@parcel/config-default": "^2.8.3",
-        "@types/dompurify": "^2.4.0",
-        "@types/trusted-types": "^2.0.2",
         "buffer": "^5.7.1",
-        "dompurify": "^2.4.3",
         "parcel": "^1.12.4",
         "parcel-bundler": "^1.3.1",
-        "parcel-reporter-multiple-static-file-copier": "^1.0.5",
-        "trusted-types": "^2.0.0"
+        "parcel-reporter-multiple-static-file-copier": "^1.0.5"
+    },
+    "targets": {
+        "example-env-ts": {
+            "source": "./envs/example-env-ts/src/main.ts",
+            "distDir": "./envs/example-env-ts/dist/js"
+        },
+        "vacuumworld-ts": {
+            "source": "./envs/vacuumworld-ts/src/main.ts",
+            "distDir": "./envs/vacuumworld-ts/dist/js"
+        },
+        "teleora_editor": {
+            "source": "./teleora_editor/src/main.ts",
+            "distDir": "./teleora_editor/dist/js"
+        },
+        "web-agent": {
+            "source": "./src/index.ts",
+            "distDir": "./static/js"
+        },
+        "index": {
+            "source": "./index.html",
+            "distDir": "parcel_dist"
+        }
     },
     "multipleStaticFileCopier": [
         {
+            "origin": "static/js",
+            "destination": "parcel_dist/static/js"
+        },
+        {
             "origin": "static/css",
-            "destination": "parcel_dist/css"
+            "destination": "parcel_dist/static/css"
         },
         {
             "origin": "static/json",
-            "destination": "parcel_dist/json"
+            "destination": "parcel_dist/static/json"
         },
         {
             "origin": "static/images",
-            "destination": "parcel_dist/images"
+            "destination": "parcel_dist/static/images"
+        },
+        {
+            "origin": "envs/example-env-ts/dist/js",
+            "destination": "parcel_dist/static/envs/example-env-ts/dist/js"
         },
         {
             "origin": "envs/example-env-ts/dist/css",
-            "destination": "parcel_dist/envs/example-env-ts/dist/css"
+            "destination": "parcel_dist/static/envs/example-env-ts/dist/css"
         },
         {
             "origin": "envs/example-env-ts/res",
-            "destination": "parcel_dist/envs/example-env-ts/res"
+            "destination": "parcel_dist/static/envs/example-env-ts/res"
+        },
+        {
+            "origin": "envs/vacuumworld-ts/dist/js",
+            "destination": "parcel_dist/static/envs/vacuumworld-ts/dist/js"
         },
         {
             "origin": "envs/vacuumworld-ts/dist/css",
-            "destination": "parcel_dist/envs/vacuumworld-ts/dist/css"
+            "destination": "parcel_dist/static/envs/vacuumworld-ts/dist/css"
         },
         {
             "origin": "envs/vacuumworld-ts/res",
-            "destination": "parcel_dist/envs/vacuumworld-ts/res"
+            "destination": "parcel_dist/static/envs/vacuumworld-ts/res"
+        },
+        {
+            "origin": "teleora_editor/dist/js",
+            "destination": "parcel_dist/static/teleora_editor/dist/js"
         },
         {
             "origin": "teleora_editor/dist/css",
-            "destination": "parcel_dist/teleora_editor/dist/css"
+            "destination": "parcel_dist/static/teleora_editor/dist/css"
         },
         {
             "origin": "teleora_editor/dist/images",
-            "destination": "parcel_dist/teleora_editor/dist/images"
+            "destination": "parcel_dist/static/teleora_editor/dist/images"
         }
     ]
 }
