--- a/teleora_editor/package.json
+++ b/teleora_editor/package.json
@@ -3,21 +3,19 @@
     "version": "1.0.0",
     "type": "module",
     "description": "",
-    "main": "dist/main.js",
+    "main": "dist/js/main.js",
     "scripts": {
         "build": "webpack --config webpack_config/webpack.prod-config.cjs",
         "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
     },
     "dependencies": {
+        "@codemirror/lang-javascript": "^6.1.2",
+        "@codemirror/state": "^6.2.0",
+        "codemirror": "^6.0.1",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
         "webpack": "^5.79.0",
         "webpack-cli": "^5.0.1",
         "webpack-merge": "^5.8.0"
-    },
-    "devDependencies": {
-        "@codemirror/lang-javascript": "^6.1.2",
-        "@codemirror/state": "^6.2.0",
-        "codemirror": "^6.0.1"
     }
 }
