Completely replaced webpack with Parcel v2.

--- a/teleora_editor/tsconfig.json
+++ b/teleora_editor/tsconfig.json
@@ -8,7 +8,6 @@
         "allowSyntheticDefaultImports": true
     },
     "exclude": [
-        "./dist",
-        "./webpack-config"
+        "./dist"
     ]
 }
