--- a/envs/vacuumworld-ts/package.json
+++ b/envs/vacuumworld-ts/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "type": "module",
     "description": "An agent platform with cleaning robots, pieces of dirt, and human users engaging in the practice of fly tipping.",
-    "main": "dist/js/main.js",
+    "scripts": {
+        "build": "parcel build",
+        "dev-build": "parcel build --no-optimize"
+    },
     "dependencies": {
         "@types/uuid": "^9.0.0",
         "fs": "0.0.1-security",
@@ -12,15 +15,20 @@
         "path-browserify": "^1.0.1",
         "process": "^0.11.10",
         "queue-typescript": "^1.0.1",
-        "ts-loader": "^9.4.2",
         "typescript": "^5.0.4",
-        "uuid": "^9.0.0",
-        "webpack": "^5.79.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-merge": "^5.8.0"
+        "uuid": "^9.0.0"
     },
-    "scripts": {
-        "build": "webpack --config webpack_config/webpack.prod-config.cjs",
-        "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
-    }
+    "devDependencies": {
+        "@parcel/config-default": "^2.8.3",
+        "buffer": "^5.7.1",
+        "parcel": "^2.8.3",
+        "parcel-reporter-multiple-static-file-copier": "^1.0.5"
+    },
+    "targets": {
+        "teleora-editor": {
+            "source": "./src/main.ts",
+            "distDir": "./dist/js"
+        }
+    },
+    "multipleStaticFileCopier": []
 }
