--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
     "name": "web-agent",
     "version": "1.0.0",
     "description": "",
-    "main": "static/js/index.js",
     "scripts": {
-        "build": "webpack --config webpack_config/webpack.prod-config.cjs",
-        "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
+        "build": "parcel build",
+        "dev-build": "parcel build --no-optimize"
     },
     "dependencies": {
         "@types/dompurify": "^2.4.0",
@@ -13,39 +12,18 @@
         "dompurify": "^2.4.3",
         "open": "^9.1.0",
         "trusted-types": "^2.0.0",
-        "ts-loader": "^9.4.2",
-        "typescript": "^5.0.4",
-        "webpack": "^5.79.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-merge": "^5.8.0"
+        "typescript": "^5.0.4"
     },
     "devDependencies": {
         "@parcel/config-default": "^2.8.3",
         "buffer": "^5.7.1",
-        "parcel": "^1.12.4",
-        "parcel-bundler": "^1.3.1",
+        "parcel": "^2.8.3",
         "parcel-reporter-multiple-static-file-copier": "^1.0.5"
     },
     "targets": {
-        "example-env-ts": {
-            "source": "./envs/example-env-ts/src/main.ts",
-            "distDir": "./envs/example-env-ts/dist/js"
-        },
-        "vacuumworld-ts": {
-            "source": "./envs/vacuumworld-ts/src/main.ts",
-            "distDir": "./envs/vacuumworld-ts/dist/js"
-        },
-        "teleora_editor": {
-            "source": "./teleora_editor/src/main.ts",
-            "distDir": "./teleora_editor/dist/js"
-        },
         "web-agent": {
             "source": "./src/index.ts",
             "distDir": "./static/js"
-        },
-        "index": {
-            "source": "./index.html",
-            "distDir": "parcel_dist"
         }
     },
     "multipleStaticFileCopier": [
