--- a/teleora_editor/package.json
+++ b/teleora_editor/package.json
@@ -3,19 +3,28 @@
     "version": "1.0.0",
     "type": "module",
     "description": "",
-    "main": "dist/js/main.js",
     "scripts": {
-        "build": "webpack --config webpack_config/webpack.prod-config.cjs",
-        "dev-build": "webpack --config webpack_config/webpack.dev-config.cjs"
+        "build": "parcel build",
+        "dev-build": "parcel build --no-optimize"
     },
     "dependencies": {
         "@codemirror/lang-javascript": "^6.1.2",
         "@codemirror/state": "^6.2.0",
         "codemirror": "^6.0.1",
-        "ts-loader": "^9.4.2",
-        "typescript": "^5.0.4",
-        "webpack": "^5.79.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-merge": "^5.8.0"
-    }
+        "typescript": "^5.0.4"
+    },
+    "devDependencies": {
+        "@parcel/config-default": "^2.8.3",
+        "buffer": "^5.7.1",
+        "parcel": "^2.8.3",
+        "parcel-reporter-multiple-static-file-copier": "^1.0.5",
+        "process": "^0.11.10"
+    },
+    "targets": {
+        "teleora-editor": {
+            "source": "./src/main.ts",
+            "distDir": "./dist/js"
+        }
+    },
+    "multipleStaticFileCopier": []
 }
