--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,8 @@
     },
     "exclude": [
         "./envs",
-        "./experimental",
         "./teleora_editor",
         "./webserver",
-        "./static",
-        "./webpack-config"
+        "./static"
     ]
 }
