--- a/envs/example-env-ts/package.json
+++ b/envs/example-env-ts/package.json
@@ -13,8 +13,7 @@
     "devDependencies": {
         "@parcel/config-default": "^2.8.3",
         "buffer": "^5.7.1",
-        "parcel": "^2.8.3",
-        "parcel-reporter-multiple-static-file-copier": "^1.0.5"
+        "parcel": "^2.8.3"
     },
     "targets": {
         "teleora-editor": {
