--- a/envs/example-env-ts/package.json
+++ b/envs/example-env-ts/package.json
@@ -7,12 +7,8 @@
         "build": "parcel build",
         "dev-build": "parcel build --no-optimize"
     },
-    "dependencies": {
-        "typescript": "^5.0.4"
-    },
+    "dependencies": {},
     "devDependencies": {
-        "@parcel/config-default": "^2.8.3",
-        "buffer": "^5.7.1",
         "parcel": "^2.8.3"
     },
     "targets": {
