--- a/package.json
+++ b/package.json
@@ -10,15 +10,10 @@
         "@types/dompurify": "^2.4.0",
         "@types/trusted-types": "^2.0.2",
         "dompurify": "^2.4.3",
-        "open": "^9.1.0",
-        "trusted-types": "^2.0.0",
-        "typescript": "^5.0.4"
+        "trusted-types": "^2.0.0"
     },
     "devDependencies": {
-        "@parcel/config-default": "^2.8.3",
-        "buffer": "^5.7.1",
-        "parcel": "^2.8.3",
-        "process": "^0.11.10"
+        "parcel": "^2.8.3"
     },
     "targets": {
         "web-agent": {
