--- a/teleora_editor/package.json
+++ b/teleora_editor/package.json
@@ -9,15 +9,10 @@
     },
     "dependencies": {
         "@codemirror/lang-javascript": "^6.1.2",
-        "@codemirror/state": "^6.2.0",
-        "codemirror": "^6.0.1",
-        "typescript": "^5.0.4"
+        "codemirror": "^6.0.1"
     },
     "devDependencies": {
-        "@parcel/config-default": "^2.8.3",
-        "buffer": "^5.7.1",
-        "parcel": "^2.8.3",
-        "process": "^0.11.10"
+        "parcel": "^2.8.3"
     },
     "targets": {
         "teleora-editor": {
