--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "trusted-types": "^2.0.0"
     },
     "devDependencies": {
-        "parcel": "^2.8.3"
+        "buffer": "^5.7.1",
+        "parcel": "^2.8.3",
+        "process": "^0.11.10"
     },
     "targets": {
         "web-agent": {
